game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__attacker_died_with_defender_stress.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- "🤣 Bob attacks Alice, but loses!"
- ☠️ Alice is killed by Bob
- "😱 Bob is horrified by the violence, loses 9 sanity."
