game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__block_wound_with_defender_stress.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- "🛡️ Bob perfectly blocks Alice's attack and counters!"
- "🤣 Bob attacks Alice, but loses!"
- 🤕 Alice wounds Bob
- "😱 Bob is horrified by the violence, loses 5 sanity."
