game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__critical_hit_with_weapon_break_and_stress.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "🗡️ Alice's Iron Sword shatters mid-swing! (-3 attack)"
- 💥 Alice lands a CRITICAL HIT on Bob!
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
- "😱 Alice is horrified by the violence, loses 4 sanity."
