game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__critical_hit_wound.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 💥 Alice lands a CRITICAL HIT on Bob!
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
