game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__fumble_death.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 😵 Alice fumbles their attack badly and hurts themself!
- ☠️ Alice is killed by themselves
