game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__fumble_death_with_weapon_break.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "🗡️ Alice's Iron Sword shatters mid-swing! (-2 attack)"
- 😵 Alice fumbles their attack badly and hurts themself!
- ☠️ Alice is killed by themselves
