game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__kill_with_attacker_stress_and_weapon_break.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "🗡️ Alice's Iron Sword shatters mid-swing! (-2 attack)"
- "🔪 Alice attacks Bob, and wins!"
- ☠️ Alice successfully kills Bob
- "😱 Alice is horrified by the violence, loses 12 sanity."
